<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_navagation"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager_navigation"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/viewGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" />

            <Button
                android:id="@+id/btn_navagation_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_yellow"
                android:text="@string/login"
                android:textColor="@color/color_white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_yellow"
                android:text="@string/login_register"
                android:textColor="@color/color_white"
                android:textSize="15sp" />


            <LinearLayout
                android:id="@+id/linear_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/walkthrough_btn_a_fbbtn"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login_facebook"
                    android:textColor="@color/color_white"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_terms_of_service_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/navagation_terms_of_service_1"
                    android:textColor="@color/color_white"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_terms_of_service_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/navagation_terms_of_service_2"
                    android:textColor="@color/color_yellow"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/txt_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:background="@null"
            android:text="@string/login_skip"
            android:textColor="@color/color_text_gray"
            android:textSize="15sp"
            android:visibility="gone"/>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg_a_bg"
        android:orientation="vertical"
        android:visibility="gone">

        <include
            layout="@layout/title_login"/>

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/login_logo_a_icon" />


        <View
            android:id="@+id/view_line_1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:alpha="0.5"
            android:background="@color/color_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayout"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <EditText
                        android:id="@+id/edt_account"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edt_height"
                        android:layout_marginStart="5dp"
                        android:background="@null"
                        android:hint="@string/login_account"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/color_white"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/color_white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayout"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edt_height"
                        android:layout_marginStart="5dp"
                        android:background="@null"
                        android:hint="@string/login_password"
                        android:inputType="textPassword"
                        android:textColor="@color/color_white"
                        android:textSize="15sp" />

                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/color_white" />

                <TextView
                    android:id="@+id/txt_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="@string/login_forget_password"
                    android:textColor="@color/color_white"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="12dp"
                        android:text="@string/navagation_privacy_policy_1"
                        android:textColor="@color/color_white"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_terms_of_service_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="12dp"
                        android:text="@string/navagation_privacy_policy_2"
                        android:textColor="@color/color_yellow"
                        android:textSize="13sp" />



                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/btn_yellow"
                android:text="@string/login"
                android:textColor="@color/color_white"
                android:textSize="15sp" />


        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
